Bulk fix for depracated wraper class methods