@@ -1206,7 +1206,7 @@ public class HTMLEditor extends JPanel {
 					.getAttributes();
 
 		if (charattrs
-			.containsAttribute(StyleConstants.Bold, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Bold, Boolean.TRUE)) {
 			boldActionB.setBorder(border2);
 			bold = true;
 		} else if (bold) {
@@ -1215,7 +1215,7 @@ public class HTMLEditor extends JPanel {
 		}
 		boldActionB.setBorderPainted(bold);
 		if (charattrs
-			.containsAttribute(StyleConstants.Italic, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Italic, Boolean.TRUE)) {
 			italicActionB.setBorder(border2);
 			italic = true;
 		} else if (italic) {
@@ -1224,7 +1224,7 @@ public class HTMLEditor extends JPanel {
 		}
 		italicActionB.setBorderPainted(italic);
 		if (charattrs
-			.containsAttribute(StyleConstants.Underline, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Underline, Boolean.TRUE)) {
 			underActionB.setBorder(border2);
 			under = true;
 		} else if (under) {
@@ -2113,8 +2113,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.COLSPAN))
 			try {
 				Integer i =
-					new Integer(
-						tda.getAttribute(HTML.Attribute.COLSPAN).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.COLSPAN).toString());
 				dlg.tdColspan.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2122,8 +2121,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.ROWSPAN))
 			try {
 				Integer i =
-					new Integer(
-						tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
+					Integer.valueOf(tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
 				dlg.tdRowspan.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2187,8 +2185,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLPADDING))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.CELLPADDING).toString());
+					Integer.valueOf(tda.getAttribute(HTML.Attribute.CELLPADDING).toString());
 				dlg.cellpadding.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2196,8 +2193,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLSPACING))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.CELLSPACING).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.CELLSPACING).toString());
 				dlg.cellspacing.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2205,8 +2201,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.BORDER))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.BORDER).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.BORDER).toString());
 				dlg.border.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
